@@ -1,7 +1,7 @@
 1..472
 # Running under perl version 5.008007 for linux
-# Current time local: Sat Mar  8 13:08:54 2008
-# Current time GMT:   Sat Mar  8 04:08:54 2008
+# Current time local: Sat Mar  8 13:59:50 2008
+# Current time GMT:   Sat Mar  8 04:59:50 2008
 # Using Test.pm version 1.25
 # t/tokenizer/test1.test
 ok 1
