@@ -1,7 +1,7 @@
 1..980
 # Running under perl version 5.008007 for linux
-# Current time local: Sat Mar  8 13:09:04 2008
-# Current time GMT:   Sat Mar  8 04:09:04 2008
+# Current time local: Sat Mar  8 14:00:02 2008
+# Current time GMT:   Sat Mar  8 05:00:02 2008
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
@@ -1183,13 +1183,17 @@ ok 827
 ok 828
 ok 829
 ok 830
-ok 831
+not ok 831
+# Test 831 got: "2" (t/HTML-tree.t at line 160 fail #416)
+#     Expected: "1" (Parse error: qq'<!DOCTYPE HTML><table a><table b>  </table></table>'; 1:34:not closed:table, 1:51:unmatched end tag:table;<table> in <table>)
 ok 832
 ok 833
 ok 834
 ok 835
 ok 836
-ok 837
+not ok 837
+# Test 837 got: "4" (t/HTML-tree.t at line 160 fail #419)
+#     Expected: "3" (Parse error: qq'<!DOCTYPE HTML><table><tr><td></td>x<table>  </table></table>'; 1:37:in table:#character, 1:44:not closed:tr, 1:44:not closed:tr, 1:61:unmatched end tag:table;char in <tr>, <table> in <tr>, unmatched </table>)
 ok 838
 ok 839
 ok 840
@@ -1473,21 +1477,13 @@ ok 1117
 ok 1118
 ok 1119
 ok 1120
-not ok 1121
-# Test 1121 got: "3" (t/HTML-tree.t at line 160 fail #561)
-#      Expected: "2" (Parse error: qq'<!DOCTYPE HTML><table a><thead><table b>'; 1:40:not closed:thead, 1:40:not closed:thead, 1:40:not closed:table;<table> in table row group, unexpected end of file)
+ok 1121
 ok 1122
-not ok 1123
-# Test 1123 got: "3" (t/HTML-tree.t at line 160 fail #562)
-#      Expected: "2" (Parse error: qq'<!DOCTYPE HTML><table a><tbody><table b>'; 1:40:not closed:tbody, 1:40:not closed:tbody, 1:40:not closed:table;<table> in table row group, unexpected end of file)
+ok 1123
 ok 1124
-not ok 1125
-# Test 1125 got: "3" (t/HTML-tree.t at line 160 fail #563)
-#      Expected: "2" (Parse error: qq'<!DOCTYPE HTML><table a><tfoot><table b>'; 1:40:not closed:tfoot, 1:40:not closed:tfoot, 1:40:not closed:table;<table> in table row group, unexpected end of file)
+ok 1125
 ok 1126
-not ok 1127
-# Test 1127 got: "3" (t/HTML-tree.t at line 160 fail #564)
-#      Expected: "2" (Parse error: qq'<!DOCTYPE HTML><table a><tr><table b>'; 1:37:not closed:tr, 1:37:not closed:tr, 1:37:not closed:table;<table> in table row, unexpected end of file)
+ok 1127
 ok 1128
 ok 1129
 ok 1130
@@ -1509,13 +1505,21 @@ ok 1145
 ok 1146
 ok 1147
 ok 1148
-ok 1149
+not ok 1149
+# Test 1149 got: "3" (t/HTML-tree.t at line 160 fail #575)
+#      Expected: "2" (Parse error: qq'<!DOCTYPE HTML><table a><thead><table b>'; 1:40:not closed:thead, 1:40:not closed:thead, 1:40:not closed:table;<table> in table row group, unexpected end of file)
 ok 1150
-ok 1151
+not ok 1151
+# Test 1151 got: "3" (t/HTML-tree.t at line 160 fail #576)
+#      Expected: "2" (Parse error: qq'<!DOCTYPE HTML><table a><tbody><table b>'; 1:40:not closed:tbody, 1:40:not closed:tbody, 1:40:not closed:table;<table> in table row group, unexpected end of file)
 ok 1152
-ok 1153
+not ok 1153
+# Test 1153 got: "3" (t/HTML-tree.t at line 160 fail #577)
+#      Expected: "2" (Parse error: qq'<!DOCTYPE HTML><table a><tfoot><table b>'; 1:40:not closed:tfoot, 1:40:not closed:tfoot, 1:40:not closed:table;<table> in table row group, unexpected end of file)
 ok 1154
-ok 1155
+not ok 1155
+# Test 1155 got: "3" (t/HTML-tree.t at line 160 fail #578)
+#      Expected: "2" (Parse error: qq'<!DOCTYPE HTML><table a><tr><table b>'; 1:37:not closed:tr, 1:37:not closed:tr, 1:37:not closed:table;<table> in table row, unexpected end of file)
 ok 1156
 ok 1157
 ok 1158
@@ -1523,9 +1527,7 @@ ok 1159
 ok 1160
 ok 1161
 ok 1162
-not ok 1163
-# Test 1163 got: "3" (t/HTML-tree.t at line 160 fail #582)
-#      Expected: "4" (Parse error: qq'<!DOCTYPE HTML><table><tr><form><td></td></form></table>'; 1:33:in table:form, 1:49:in table:/form, 1:49:unmatched end tag:form;<form> in table, form not closed, </form> in table, ubmatched </form>)
+ok 1163
 ok 1164
 ok 1165
 ok 1166
@@ -1543,13 +1545,9 @@ ok 1177
 ok 1178
 ok 1179
 ok 1180
-not ok 1181
-# Test 1181 got: "3" (t/HTML-tree.t at line 160 fail #591)
-#      Expected: "4" (Parse error: qq'<p><font><form> </form>'; 1:4:no DOCTYPE, 1:16:not closed:font, 1:23:not closed:font;1,4,no DOCTYPE, 1,16,not closed:font, 1,23,unmatched end tag:form, 1,23,not closed:font)
+ok 1181
 ok 1182
-not ok 1183
-# Test 1183 got: "4" (t/HTML-tree.t at line 160 fail #592)
-#      Expected: "3" (Parse error: qq'<table a><tr><table b>'; 1:10:no DOCTYPE, 1:22:not closed:tr, 1:22:not closed:tr, 1:22:not closed:table;1,10,no DOCTYPE, 1,22,not closed:tr, 1,22,not closed:table)
+ok 1183
 ok 1184
 ok 1185
 ok 1186
@@ -1557,7 +1555,9 @@ ok 1187
 ok 1188
 ok 1189
 ok 1190
-ok 1191
+not ok 1191
+# Test 1191 got: "3" (t/HTML-tree.t at line 160 fail #596)
+#      Expected: "4" (Parse error: qq'<!DOCTYPE HTML><table><tr><form><td></td></form></table>'; 1:33:in table:form, 1:49:in table:/form, 1:49:unmatched end tag:form;<form> in table, form not closed, </form> in table, ubmatched </form>)
 ok 1192
 ok 1193
 ok 1194
@@ -1575,9 +1575,13 @@ ok 1205
 ok 1206
 ok 1207
 ok 1208
-ok 1209
+not ok 1209
+# Test 1209 got: "3" (t/HTML-tree.t at line 160 fail #605)
+#      Expected: "4" (Parse error: qq'<p><font><form> </form>'; 1:4:no DOCTYPE, 1:16:not closed:font, 1:23:not closed:font;1,4,no DOCTYPE, 1,16,not closed:font, 1,23,unmatched end tag:form, 1,23,not closed:font)
 ok 1210
-ok 1211
+not ok 1211
+# Test 1211 got: "4" (t/HTML-tree.t at line 160 fail #606)
+#      Expected: "3" (Parse error: qq'<table a><tr><table b>'; 1:10:no DOCTYPE, 1:22:not closed:tr, 1:22:not closed:tr, 1:22:not closed:table;1,10,no DOCTYPE, 1,22,not closed:tr, 1,22,not closed:table)
 ok 1212
 ok 1213
 ok 1214
@@ -1619,7 +1623,6 @@ ok 1249
 ok 1250
 ok 1251
 ok 1252
-# t/tree-test-2.dat
 ok 1253
 ok 1254
 ok 1255
@@ -1648,6 +1651,7 @@ ok 1277
 ok 1278
 ok 1279
 ok 1280
+# t/tree-test-2.dat
 ok 1281
 ok 1282
 ok 1283
@@ -1686,19 +1690,13 @@ ok 1315
 ok 1316
 ok 1317
 ok 1318
-not ok 1319
-# Test 1319 got: "2" (t/HTML-tree.t at line 160 fail #660)
-#      Expected: "1" (Parse error: qq'</table><td>'; 1:9:unmatched end tag:4, 1:12:not closed:td;</table> in <tr>.innerHTML)
+ok 1319
 ok 1320
 ok 1321
 ok 1322
-not ok 1323
-# Test 1323 got: "2" (t/HTML-tree.t at line 160 fail #662)
-#      Expected: "1" (Parse error: qq'<table>'; 1:7:not closed:html, 1:7:unmatched end tag:table;<table> in <table>)
+ok 1323
 ok 1324
-not ok 1325
-# Test 1325 got: "3" (t/HTML-tree.t at line 160 fail #663)
-#      Expected: "1" (Parse error: qq'<table><tr>'; 1:8:not closed:html, 1:8:unmatched end tag:table, 1:11:not closed:tr;<table> in <table>)
+ok 1325
 ok 1326
 ok 1327
 ok 1328
@@ -1706,15 +1704,11 @@ ok 1329
 ok 1330
 ok 1331
 ok 1332
-not ok 1333
-# Test 1333 got: "2" (t/HTML-tree.t at line 160 fail #667)
-#      Expected: "1" (Parse error: qq'</select><option>'; 1:10:unmatched end tag:select, 1:17:not closed:option;</select> in <select>.innerHTML)
+ok 1333
 ok 1334
 ok 1335
 ok 1336
-not ok 1337
-# Test 1337 got: "3" (t/HTML-tree.t at line 160 fail #669)
-#      Expected: "2" (Parse error: qq'<select><option>'; 1:9:not closed:select, 1:9:unmatched end tag:select, 1:16:not closed:option;<select> in <select> - treated as if </select>, </select> in <select>.innerHTML)
+ok 1337
 ok 1338
 ok 1339
 ok 1340
@@ -1724,13 +1718,19 @@ ok 1343
 ok 1344
 ok 1345
 ok 1346
-ok 1347
+not ok 1347
+# Test 1347 got: "2" (t/HTML-tree.t at line 160 fail #674)
+#      Expected: "1" (Parse error: qq'</table><td>'; 1:9:unmatched end tag:4, 1:12:not closed:td;</table> in <tr>.innerHTML)
 ok 1348
 ok 1349
 ok 1350
-ok 1351
+not ok 1351
+# Test 1351 got: "2" (t/HTML-tree.t at line 160 fail #676)
+#      Expected: "1" (Parse error: qq'<table>'; 1:7:not closed:html, 1:7:unmatched end tag:table;<table> in <table>)
 ok 1352
-ok 1353
+not ok 1353
+# Test 1353 got: "3" (t/HTML-tree.t at line 160 fail #677)
+#      Expected: "1" (Parse error: qq'<table><tr>'; 1:8:not closed:html, 1:8:unmatched end tag:table, 1:11:not closed:tr;<table> in <table>)
 ok 1354
 ok 1355
 ok 1356
@@ -1738,21 +1738,19 @@ ok 1357
 ok 1358
 ok 1359
 ok 1360
-ok 1361
+not ok 1361
+# Test 1361 got: "2" (t/HTML-tree.t at line 160 fail #681)
+#      Expected: "1" (Parse error: qq'</select><option>'; 1:10:unmatched end tag:select, 1:17:not closed:option;</select> in <select>.innerHTML)
 ok 1362
 ok 1363
 ok 1364
 not ok 1365
-# Test 1365 got: "1" (t/HTML-tree.t at line 160 fail #683)
-#      Expected: "0" (Parse error: qq'<option>'; 1:8:not closed:option;)
+# Test 1365 got: "3" (t/HTML-tree.t at line 160 fail #683)
+#      Expected: "2" (Parse error: qq'<select><option>'; 1:9:not closed:select, 1:9:unmatched end tag:select, 1:16:not closed:option;<select> in <select> - treated as if </select>, </select> in <select>.innerHTML)
 ok 1366
-not ok 1367
-# Test 1367 got: "1" (t/HTML-tree.t at line 160 fail #684)
-#      Expected: "0" (Parse error: qq'<optgroup>'; 1:10:not closed:optgroup;)
+ok 1367
 ok 1368
-not ok 1369
-# Test 1369 got: "2" (t/HTML-tree.t at line 160 fail #685)
-#      Expected: "1" (Parse error: qq'</tr><option>a'; 1:6:unmatched end tag:tr, 1:14:not closed:option;</tr> in <select>)
+ok 1369
 ok 1370
 ok 1371
 ok 1372
@@ -1776,11 +1774,17 @@ ok 1389
 ok 1390
 ok 1391
 ok 1392
-ok 1393
+not ok 1393
+# Test 1393 got: "1" (t/HTML-tree.t at line 160 fail #697)
+#      Expected: "0" (Parse error: qq'<option>'; 1:8:not closed:option;)
 ok 1394
-ok 1395
+not ok 1395
+# Test 1395 got: "1" (t/HTML-tree.t at line 160 fail #698)
+#      Expected: "0" (Parse error: qq'<optgroup>'; 1:10:not closed:optgroup;)
 ok 1396
-ok 1397
+not ok 1397
+# Test 1397 got: "2" (t/HTML-tree.t at line 160 fail #699)
+#      Expected: "1" (Parse error: qq'</tr><option>a'; 1:6:unmatched end tag:tr, 1:14:not closed:option;</tr> in <select>)
 ok 1398
 ok 1399
 ok 1400
@@ -1826,3 +1830,31 @@ ok 1439
 ok 1440
 ok 1441
 ok 1442
+ok 1443
+ok 1444
+ok 1445
+ok 1446
+ok 1447
+ok 1448
+ok 1449
+ok 1450
+ok 1451
+ok 1452
+ok 1453
+ok 1454
+ok 1455
+ok 1456
+ok 1457
+ok 1458
+ok 1459
+ok 1460
+ok 1461
+ok 1462
+ok 1463
+ok 1464
+ok 1465
+ok 1466
+ok 1467
+ok 1468
+ok 1469
+ok 1470
