@@ -1,5 +1,10 @@
 2008-03-08  Wakaba  <wakaba@suika.fam.cx>
 
+	* tree-test-1.dat: Test data for tainted space in tables are
+	added (HTML5 revision 1326).
+
+2008-03-08  Wakaba  <wakaba@suika.fam.cx>
+
 	* tree-test-1.dat: Tests for </form> are added (HTML5 revision 1320).
 
 2008-03-06  Wakaba  <wakaba@suika.fam.cx>
