@@ -1,5 +1,10 @@
 2008-03-08  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm.src: White space in tainted tables are moved
+	into foster parents (HTML5 revision 1326).
+
+2008-03-08  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML.pm.src: Reduce errors from foster parenting cases (HTML5
 	revision 1321).
 
